<resources>
    <string name="app_name">libraryApp</string>
    <string name="LOGIN" />
    <string name="cleitin_library">Cleitin Library</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="details">Details</string>

    <string name="submit">Submit</string>
    <string name="open_custom_dialog">Add new item</string>
    <string name="custom_dialog">New Item</string>
    <string name="info">Name: %1$s. Amount: %2$s. Details %3$s.</string>


    <string name="cover">Cover</string>
    <string name="title_place_holder">Title Place Holder</string>
    <string name="author_placeholder">Author PlaceHolder</string>

    <string name="new_person">New Lessee</string>
    <string name="new_person_name">Lessee Name</string>
    <string name="new_person_phone">Lessee Phone</string>
    <string name="person_info">Name: %1$s. Phone: %2$s. Details %3$s.</string>

    <string name="available">available</string>
    <string name="unavailable">unavailable</string>

    <string name="new_lessee">New Lessee</string>
    <string name="is_available">accept to withdraw item</string>

    <string name="addButton">+</string>

    //pasta
    //pasta
    <string name="pastaItems">Pasta
\nCream Cheese
\nParmesan Cheese
\nOlive Oil
\nGarlic
\nSalt Pepper</string>
    <string name="pastaDesc">Cook your pasta until al dente
\nSaute’ garlic in olive oil until fragrant
\nAdd cream cheese, pasta cooking water, parmesan, and stir well
\nDrain and add pasta to the skillet
\nToss until well combined, adding some pasta water if needed</string>
    //maggi
    <string name="maggiItems">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="maggieDesc">Add one and half cup of water
\nAdd maggi noodles and boil it
\nAdd the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    //cake
    <string name="cakeItems">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="cakeDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    //pancake
    <string name="pancakeItems">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="pancakeDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    //pizza
    <string name="pizzaItems">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="pizzaDesc">Add one and half cup of water
Add maggi noodles and boil it
Add the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    //burgers
    <string name="burgerItems">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="burgerDesc">Add one and half cup of water
\nAdd maggi noodles and boil it
\nAdd the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    //fries
    <string name="friesItems">Maggi Noodles
\nWater
\nMaggi Masala</string>
    <string name="friesDesc">Add one and half cup of water
\nAdd maggi noodles and boil it
\nAdd the maggi masala on to it
\nWait for 2 mins
\nMaggi is ready!</string>
    <string name="edit">Edit</string>
    <string name="edit_item">Edit item</string>
    <string name="history">History</string>


</resources>