<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_item"
        android:textSize="24sp"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_person_name"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:id="@+id/lessee_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_person_phone"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:id="@+id/lessee_phone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:id="@+id/amount"/>

    <!--    <CheckBox-->
    <!--        android:id="@+id/checkBox"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/is_available" />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:id="@+id/submit_button"/>

</LinearLayout>