<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog"
        android:textSize="24sp"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:id="@+id/item_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:id="@+id/item_amount"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/details"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:id="@+id/item_details"/>

    <TextView
        android:id="@+id/add_Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="+"
        android:textColor="@color/colorBlack"
        android:textSize="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/registrar"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:id="@+id/submit_button"/>

</LinearLayout>